explore hf model

--- a/notebooks/01_hf_exploration.ipynb
+++ b/notebooks/01_hf_exploration.ipynb
@@ -43,18 +43,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tokens shape: torch.Size([2, 11])\n",
-      "Tokens IDs: Starts with <CLS> token and splits into 6-mers if multiple of 6, padded with <PAD> tokens\n",
+      "Tokens shape: torch.Size([2, 11]) \n",
+      "\n",
+      "Tokens IDs:\n",
       "tensor([[   3,  369,  369,  369,    1,    1,    1,    1,    1,    1,    1],\n",
       "        [   3,  351, 2463, 2466, 3186, 1740, 4105, 4102, 4103,    1,    1]])\n",
       "Decoding back to sequences:\n",
-      "Decoded sequences: ['<cls> ATTCCG ATTCCG ATTCCG <pad> <pad> <pad> <pad> <pad> <pad> <pad>', '<cls> ATTTCT CTCTCT CTCTGA GATCGA TCGATC G A T <pad> <pad>']\n"
+      "['<cls> ATTCCG ATTCCG ATTCCG <pad> <pad> <pad> <pad> <pad> <pad> <pad>', '<cls> ATTTCT CTCTCT CTCTGA GATCGA TCGATC G A T <pad> <pad>']\n"
      ]
     }
    ],
    "source": [
     "# length to which the input sequences are padded\n",
-    "max_length = tokenizer.model_max_length     # 2048\n",
+    "max_length = tokenizer.model_max_length     # 2048, hence 12kbp context window\n",
     "\n",
     "# Create a dummy dna sequence and tokenize it (6-mers if multiple of 6)\n",
     "sequences = [\"ATTCCGATTCCGATTCCG\", \"ATTTCTCTCTCTCTCTGAGATCGATCGATCGAT\"]\n",
@@ -62,17 +63,17 @@
     "print(\"Tokens shape:\", tokens_ids.shape, \"\\n\")\n",
     "\n",
     "\n",
-    "print(\"Tokens IDs: Starts with <CLS> token and splits into 6-mers if multiple of 6, padded with <PAD> tokens\")\n",
+    "print(\"Tokens IDs:\")\n",
     "print(tokens_ids[:,:11])\n",
     "\n",
     "print(\"Decoding back to sequences:\")\n",
     "decoded_sequences = tokenizer.batch_decode(tokens_ids, skip_special_tokens=False)\n",
-    "print(\"Decoded sequences:\", decoded_sequences)"
+    "print(decoded_sequences)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "baa7d268",
    "metadata": {},
    "outputs": [
@@ -80,65 +81,66 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Embeddings shape: (2, 2048, 1024)\n",
-      "Embeddings per token: [[[ 0.506377    0.14925334  0.5267083  ... -0.6013588   0.76712173\n",
-      "   -0.24135433]\n",
-      "  [ 0.3073899   0.01497174  0.31069803 ... -0.8692521   0.7053512\n",
-      "   -0.04935056]\n",
-      "  [ 0.2753041   0.23837496  0.16276833 ... -0.9556887   0.6267955\n",
-      "   -0.07545134]\n",
+      "tensor([[ True,  True,  True,  True, False, False, False, False, False, False,\n",
+      "         False],\n",
+      "        [ True,  True,  True,  True,  True,  True,  True,  True,  True, False,\n",
+      "         False]])\n",
+      "Embeddings shape: (2, 11, 1024)\n",
+      "Embeddings per token: [[[ 0.50637925  0.14925307  0.526706   ... -0.6013561   0.76712173\n",
+      "   -0.24135263]\n",
+      "  [ 0.30739102  0.01497138  0.31069276 ... -0.8692496   0.7053464\n",
+      "   -0.04934862]\n",
+      "  [ 0.27530244  0.2383724   0.16276649 ... -0.95568717  0.6267945\n",
+      "   -0.07545093]\n",
       "  ...\n",
-      "  [ 0.19590917 -0.07998952  0.10465808 ...  0.00264151  0.46054763\n",
-      "   -0.0351527 ]\n",
-      "  [ 0.3376015  -0.20001088  0.04658983 ...  0.02611579  0.44138515\n",
-      "   -0.21832661]\n",
-      "  [ 0.07734504 -0.34250122  0.07812366 ...  0.20738798  0.2853003\n",
-      "   -0.15824707]]\n",
+      "  [ 0.9203838  -0.04136808  0.08182072 ... -0.53490424  0.2571789\n",
+      "   -0.13717528]\n",
+      "  [ 0.9504963   0.02858299  0.07393027 ... -0.49353155  0.380477\n",
+      "   -0.21202193]\n",
+      "  [ 1.0615091  -0.08195896  0.142325   ... -0.51462924  0.4050352\n",
+      "   -0.29604894]]\n",
       "\n",
-      " [[-0.02621049 -0.5077791   0.3580327  ... -0.23096023  0.7863456\n",
-      "   -1.0120155 ]\n",
-      "  [ 0.4935458  -0.5940486   0.24656974 ... -0.3358434   0.06688204\n",
-      "    0.25064632]\n",
-      "  [ 0.01741558  0.09177573  0.43233514 ... -0.20135874  0.33414453\n",
-      "    0.01312017]\n",
+      " [[-0.02620885 -0.50777876  0.3580304  ... -0.23096171  0.7863488\n",
+      "   -1.0120119 ]\n",
+      "  [ 0.49354693 -0.59404796  0.24656996 ... -0.3358443   0.06688058\n",
+      "    0.2506485 ]\n",
+      "  [ 0.0174152   0.091777    0.43233433 ... -0.20136136  0.33414203\n",
+      "    0.01311848]\n",
       "  ...\n",
-      "  [ 0.20584676 -0.76628757  0.59376454 ... -0.5139848   0.6144526\n",
-      "   -1.1537104 ]\n",
-      "  [-0.07695752 -0.36022145 -0.37434888 ... -0.67634785  0.42619026\n",
-      "   -1.0293765 ]\n",
-      "  [-0.68402076 -0.5873408   0.2978195  ... -0.68080723  0.658903\n",
-      "   -1.0347201 ]]]\n"
+      "  [ 0.60015166 -0.02851669  0.34587303 ...  0.63616663  0.24449326\n",
+      "   -0.22113384]\n",
+      "  [ 0.69245744 -0.08794422  0.68565124 ...  0.11240028  0.1327845\n",
+      "   -0.573112  ]\n",
+      "  [ 0.77422726 -0.23692815  0.24150643 ...  0.15297759  0.13176309\n",
+      "   -0.3316574 ]]]\n",
+      "Mean sequence embeddings: tensor([[ 0.3634,  0.1437,  0.2810,  ..., -0.8623,  0.6422, -0.1028],\n",
+      "        [ 0.3041, -0.1513,  0.3624,  ..., -0.0744,  0.0820, -0.2940]])\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/zb/p41gp_m56t14dq5sdzffcz9m0000gn/T/ipykernel_85760/2084349794.py:19: DeprecationWarning: __array_wrap__ must accept context and return_scalar arguments (positionally) in the future. (Deprecated NumPy 2.0)\n",
+      "/var/folders/zb/p41gp_m56t14dq5sdzffcz9m0000gn/T/ipykernel_85760/2032551781.py:22: DeprecationWarning: __array_wrap__ must accept context and return_scalar arguments (positionally) in the future. (Deprecated NumPy 2.0)\n",
       "  mean_sequence_embeddings = torch.sum(attention_mask*embeddings, axis=-2)/torch.sum(attention_mask, axis=1)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mean sequence embeddings: tensor([[ 0.3634,  0.1437,  0.2810,  ..., -0.8623,  0.6422, -0.1028],\n",
-      "        [ 0.3041, -0.1513,  0.3624,  ..., -0.0744,  0.0820, -0.2940]])\n"
      ]
     }
    ],
    "source": [
     "# Compute the embeddings\n",
     "attention_mask = tokens_ids != tokenizer.pad_token_id\n",
+    "print(\"Attention Mask\", attention_mask)\n",
+    "\n",
+    "\n",
     "torch_outs = model(\n",
     "    tokens_ids,\n",
-    "    attention_mask=attention_mask,\n",
+    "    attention_mask=attention_mask,  # prevents attention to padding tokens\n",
     "    encoder_attention_mask=attention_mask,\n",
-    "    output_hidden_states=True\n",
+    "    output_hidden_states=True       # to get all layer embeddings\n",
     ")\n",
     "\n",
     "# Compute sequences embeddings\n",
-    "embeddings = torch_outs['hidden_states'][-1].detach().numpy()\n",
+    "embeddings = torch_outs['hidden_states'][-1].detach().numpy()   # obtains final transformer layer embeddings\n",
     "print(f\"Embeddings shape: {embeddings.shape}\")\n",
     "print(f\"Embeddings per token: {embeddings}\")\n",
     "\n",
@@ -149,6 +151,14 @@
     "mean_sequence_embeddings = torch.sum(attention_mask*embeddings, axis=-2)/torch.sum(attention_mask, axis=1)\n",
     "print(f\"Mean sequence embeddings: {mean_sequence_embeddings}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4534cd40",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
