update hugging face exploration notebook

--- a/notebooks/01_hf_exploration.ipynb
+++ b/notebooks/01_hf_exploration.ipynb
@@ -12,18 +12,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 49,
    "id": "92ce0a20",
    "metadata": {},
    "outputs": [],
    "source": [
     "from transformers import AutoTokenizer, AutoModel\n",
-    "import torch"
+    "import torch\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 50,
    "id": "2ecd82aa",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "id": "40277c13",
    "metadata": {},
    "outputs": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "id": "baa7d268",
    "metadata": {},
    "outputs": [
@@ -81,7 +81,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[ True,  True,  True,  True, False, False, False, False, False, False,\n",
+      "Attention Mask tensor([[ True,  True,  True,  True, False, False, False, False, False, False,\n",
       "         False],\n",
       "        [ True,  True,  True,  True,  True,  True,  True,  True,  True, False,\n",
       "         False]])\n",
@@ -121,7 +121,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/zb/p41gp_m56t14dq5sdzffcz9m0000gn/T/ipykernel_85760/2032551781.py:22: DeprecationWarning: __array_wrap__ must accept context and return_scalar arguments (positionally) in the future. (Deprecated NumPy 2.0)\n",
+      "/var/folders/zb/p41gp_m56t14dq5sdzffcz9m0000gn/T/ipykernel_85760/2240686937.py:22: DeprecationWarning: __array_wrap__ must accept context and return_scalar arguments (positionally) in the future. (Deprecated NumPy 2.0)\n",
       "  mean_sequence_embeddings = torch.sum(attention_mask*embeddings, axis=-2)/torch.sum(attention_mask, axis=1)\n"
      ]
     }
@@ -151,14 +151,6 @@
     "mean_sequence_embeddings = torch.sum(attention_mask*embeddings, axis=-2)/torch.sum(attention_mask, axis=1)\n",
     "print(f\"Mean sequence embeddings: {mean_sequence_embeddings}\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4534cd40",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
