per layer preliminary notebook analysis

--- a/notebooks/02_logreg.ipynb
+++ b/notebooks/02_logreg.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "e89a347b",
    "metadata": {},
    "outputs": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "c4103c7c",
    "metadata": {},
    "outputs": [
@@ -75,25 +75,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ROC-AUC: 0.7253030303030303 +/- 0.044787017665072246\n",
-      "Acc:     0.7114624505928855 +/- 0.073479525935951\n",
-      "F1:      0.725752508361204 +/- 0.07510328653498402\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/miniconda3/envs/mechanistic_interpretability/lib/python3.11/site-packages/sklearn/linear_model/_logistic.py:1135: FutureWarning: 'penalty' was deprecated in version 1.8 and will be removed in 1.10. To avoid this warning, leave 'penalty' set to its default value and use 'l1_ratio' or 'C' instead. Use l1_ratio=0 instead of penalty='l2', l1_ratio=1 instead of penalty='l1', and C=np.inf instead of penalty=None.\n",
-      "  warnings.warn(\n",
-      "/opt/miniconda3/envs/mechanistic_interpretability/lib/python3.11/site-packages/sklearn/linear_model/_logistic.py:1135: FutureWarning: 'penalty' was deprecated in version 1.8 and will be removed in 1.10. To avoid this warning, leave 'penalty' set to its default value and use 'l1_ratio' or 'C' instead. Use l1_ratio=0 instead of penalty='l2', l1_ratio=1 instead of penalty='l1', and C=np.inf instead of penalty=None.\n",
-      "  warnings.warn(\n",
-      "/opt/miniconda3/envs/mechanistic_interpretability/lib/python3.11/site-packages/sklearn/linear_model/_logistic.py:1135: FutureWarning: 'penalty' was deprecated in version 1.8 and will be removed in 1.10. To avoid this warning, leave 'penalty' set to its default value and use 'l1_ratio' or 'C' instead. Use l1_ratio=0 instead of penalty='l2', l1_ratio=1 instead of penalty='l1', and C=np.inf instead of penalty=None.\n",
-      "  warnings.warn(\n",
-      "/opt/miniconda3/envs/mechanistic_interpretability/lib/python3.11/site-packages/sklearn/linear_model/_logistic.py:1135: FutureWarning: 'penalty' was deprecated in version 1.8 and will be removed in 1.10. To avoid this warning, leave 'penalty' set to its default value and use 'l1_ratio' or 'C' instead. Use l1_ratio=0 instead of penalty='l2', l1_ratio=1 instead of penalty='l1', and C=np.inf instead of penalty=None.\n",
-      "  warnings.warn(\n",
-      "/opt/miniconda3/envs/mechanistic_interpretability/lib/python3.11/site-packages/sklearn/linear_model/_logistic.py:1135: FutureWarning: 'penalty' was deprecated in version 1.8 and will be removed in 1.10. To avoid this warning, leave 'penalty' set to its default value and use 'l1_ratio' or 'C' instead. Use l1_ratio=0 instead of penalty='l2', l1_ratio=1 instead of penalty='l1', and C=np.inf instead of penalty=None.\n",
-      "  warnings.warn(\n"
+      "ROC-AUC: 0.7237878787878789 +/- 0.04456606408414642\n",
+      "Acc:     0.6940711462450594 +/- 0.07514456688263174\n",
+      "F1:      0.703091111786764 +/- 0.08076593303148627\n"
      ]
     }
    ],
@@ -102,7 +86,7 @@
     "    StandardScaler(),\n",
     "    PCA(n_components=50),  # optional: reduce dimensionality\n",
     "    LogisticRegression(\n",
-    "        penalty=\"l2\",\n",
+    "        l1_ratio=0,\n",
     "        C=0.1,               # smaller = stronger regularization; start 0.1 or 0.01\n",
     "        solver=\"liblinear\",  # good for small datasets\n",
     "        max_iter=5000\n",
@@ -134,9 +118,108 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "a5d35747",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading embeddings from: root/data/clinvar_pooled_embeddings__n155__bp3000__tok505__layers10.pt\n",
+      "dict_keys(['model_name', 'bp_window_len', 'token_max_length', 'pooling', 'layers', 'labels', 'embeddings_by_layer'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "path = \"root/data/clinvar_pooled_embeddings__n155__bp3000__tok505__layers10.pt\"\n",
+    "payload = torch.load(path, map_location=\"cpu\")\n",
+    "\n",
+    "print(\"Loading embeddings from:\", path)\n",
+    "print(payload.keys())\n",
+    "\n",
+    "layers = payload[\"layers\"]\n",
+    "labels = np.array(payload[\"labels\"])\n",
+    "n = len(labels)  # number of variants (N)\n",
+    "\n",
+    "# pick a layer you want\n",
+    "layer = 28  # e.g., last layer\n",
+    "E = payload[\"embeddings_by_layer\"][layer]  # shape (2N, 1024), torch.Tensor\n",
+    "\n",
+    "# split REF and ALT\n",
+    "ref = E[:n].numpy()      # (N, 1024)\n",
+    "alt = E[n:].numpy()      # (N, 1024)\n",
+    "\n",
+    "# delta\n",
+    "X = alt - ref            # (N, 1024)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "b3eaa3f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using only Class 1 and Class 5 samples: 114 out of 155\n",
+      "y shape before encoding: (155,)\n",
+      "X shape: (114, 1024)\n",
+      "y counts: 114 with 60 positives\n"
+     ]
+    }
+   ],
+   "source": [
+    "mask = np.isin(labels, [\"Class 1\", \"Class 5\"])\n",
+    "print(\"Using only Class 1 and Class 5 samples:\", np.sum(mask), \"out of\", n)\n",
+    "X_bin = X[mask]\n",
+    "print(\"y shape before encoding:\", labels.shape)\n",
+    "y_bin = (labels[mask] == \"Class 5\").astype(int)  # Class 1 -> 0, Class 5 -> 1\n",
+    "\n",
+    "print(\"X shape:\", X_bin.shape)\n",
+    "print(\"y counts:\", len(y_bin), \"with\", np.sum(y_bin), \"positives\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "8af71438",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ROC-AUC: 0.864 +/- 0.045\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import StratifiedKFold, cross_val_score\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "clf = Pipeline([\n",
+    "    (\"scaler\", StandardScaler()),\n",
+    "    (\"lr\", LogisticRegression(max_iter=5000, class_weight=\"balanced\"))\n",
+    "])\n",
+    "\n",
+    "cv = StratifiedKFold(n_splits=5, shuffle=True, random_state=0)\n",
+    "auc = cross_val_score(clf, X_bin, y_bin, cv=cv, scoring=\"roc_auc\")\n",
+    "\n",
+    "print(f\"ROC-AUC: {auc.mean():.3f} +/- {auc.std():.3f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8009b2a3",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
