new metrics file and finalize log reg classifier head script

--- a/notebooks/02_logreg.ipynb
+++ b/notebooks/02_logreg.ipynb
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "id": "a5d35747",
    "metadata": {},
    "outputs": [
@@ -128,7 +128,8 @@
      "output_type": "stream",
      "text": [
       "Loading embeddings from: root/data/clinvar_pooled_embeddings__n155__bp3000__tok505__layers10.pt\n",
-      "dict_keys(['model_name', 'bp_window_len', 'token_max_length', 'pooling', 'layers', 'labels', 'embeddings_by_layer'])\n"
+      "dict_keys(['model_name', 'bp_window_len', 'token_max_length', 'pooling', 'layers', 'labels', 'embeddings_by_layer'])\n",
+      "Size of E: torch.Size([310, 1024])\n"
      ]
     }
    ],
@@ -146,6 +147,7 @@
     "# pick a layer you want\n",
     "layer = 28  # e.g., last layer\n",
     "E = payload[\"embeddings_by_layer\"][layer]  # shape (2N, 1024), torch.Tensor\n",
+    "print(\"Size of E:\", E.shape)\n",
     "\n",
     "# split REF and ALT\n",
     "ref = E[:n].numpy()      # (N, 1024)\n",
@@ -157,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "id": "b3eaa3f9",
    "metadata": {},
    "outputs": [
@@ -168,7 +170,8 @@
       "Using only Class 1 and Class 5 samples: 114 out of 155\n",
       "y shape before encoding: (155,)\n",
       "X shape: (114, 1024)\n",
-      "y counts: 114 with 60 positives\n"
+      "y counts: 114 with 60 positives\n",
+      "Len of record = 1024\n"
      ]
     }
    ],
@@ -180,7 +183,8 @@
     "y_bin = (labels[mask] == \"Class 5\").astype(int)  # Class 1 -> 0, Class 5 -> 1\n",
     "\n",
     "print(\"X shape:\", X_bin.shape)\n",
-    "print(\"y counts:\", len(y_bin), \"with\", np.sum(y_bin), \"positives\")"
+    "print(\"y counts:\", len(y_bin), \"with\", np.sum(y_bin), \"positives\")\n",
+    "print(\"Len of record =\", X_bin[0].shape[0])"
    ]
   },
   {
@@ -213,14 +217,6 @@
     "\n",
     "print(f\"ROC-AUC: {auc.mean():.3f} +/- {auc.std():.3f}\")\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8009b2a3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
